[Fix] Wrong font-family setting

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-size: 16px;
     color: #fff;
     background-color: #61122f;
-    font-family: 'Oxygen san-serif';
+    font-family: 'Oxygen', sans-serif;
 }
 
 /** HEADER **/
